--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     </head>
     <body>
         <div class="card">
-            <img class="avatar" src="images/abhi.png">
+            <img class="avatar" src="abhi.png">
             <div >
                 <h3>Abhishek Kumar</h3>
                 <p>Frontend Developer</p>
